fix cutoff label text

--- a/web/src/styles/properties.css
+++ b/web/src/styles/properties.css
@@ -159,7 +159,7 @@
   font-size: var(--font-size-normal);
   padding: 0;
   margin: 0;
-  line-height: 1.05em;
+  line-height: 1.12em;
   max-height: 2em;
   overflow: hidden;
 }
